--- a/src/SM/Bundle/AdminBundle/Resources/config/routing/admin.yml
+++ b/src/SM/Bundle/AdminBundle/Resources/config/routing/admin.yml
@@ -1,6 +1,11 @@
 admin_user:
-    path:     /
-    defaults: { _controller: "SMAdminBundle:Admin:index" }
+    path:     /{page}/
+    defaults: { _controller: "SMAdminBundle:Admin:index", page: 1 }
+
+admin_user_ajax_active_deactive:
+    path:     /active_deactive
+    defaults: { _controller: "SMAdminBundle:Admin:change"}
+    methods:  POST
 
 admin_user_show:
     path:     /{id}/show
