--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -59,5 +59,5 @@ security:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/efconnect, role: ROLE_ADMIN }
-        # - { path: ^/elfinder, role: ROLE_ADMIN }
+        - { path: ^/efconnect, role: ROLE_USER }
+        - { path: ^/elfinder, role: ROLE_USER }
